[package]
name = "cp-snark-bbs"
version = "0.1.0"
edition = "2021"

[dependencies]
bbs_plus = { version = "0.6.0", default-features = false }
proof_system = { version = "0.8.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
rayon = { version = "1", optional = true }

[dependencies.legogroth16]
git = "https://github.com/lovesh/legogro16"
branch = "comm-wit"
#path = "/home/lovesh/dev/legogro16"

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

[features]
default = ["std", "parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-relations/std", "ark-std/std", "bbs_plus/std", "proof_system/std", "legogroth16/std" ]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "bbs_plus/parallel", "proof_system/parallel", "legogroth16/parallel"]